--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,17 @@
 version: "3"
 
 services:
+  app:
+    depends_on:
+      - db
+    image: nathanvaughn/webtrees:latest
+    ports:
+      - 1000:80
+    restart: unless-stopped
+    volumes:
+      - app_data:/var/www/webtrees/data/
+      - app_media:/var/www/webtrees/media/
+
   db:
     command: "--default-authentication-plugin=mysql_native_password"
     environment:
@@ -8,21 +19,10 @@ services:
       MYSQL_USER: "webtrees"
       MYSQL_ROOT_PASSWORD: "badpassword"
       MYSQL_USER_PASSWORD: "badpassword"
-    image: mysql/mysql-server:latest
+    image: mysql:latest
     restart: unless-stopped
     volumes:
-      - "db_data:/var/lib/mysql"
-
-  app:
-    depends_on:
-      - db
-    image: nathanvaughn/webtrees:latest
-    ports:
-      - "1000:80"
-    restart: unless-stopped
-    volumes:
-      - "app_data:/var/www/webtrees/data/"
-      - "app_media:/var/www/webtrees/media/"
+      - db_data:/var/lib/mysql
 
 volumes:
   db_data:
