--- a/hooks/build
+++ b/hooks/build
@@ -3,6 +3,15 @@
 # $IMAGE_NAME var is injected into the build so the tag is correct.
 
 echo "Build hook running"
+echo "Tags being built: $DOCKER_TAG"
+
+IFS=',' read -ra tags <<< "$DOCKER_TAG"
+
 docker build --build-arg BUILD_DATE=`date -u +"%Y-%m-%dT%H:%M:%SZ"` \
-             --build-arg VCS_REF=`git rev-parse --short HEAD` \
-             -t $IMAGE_NAME .
+             --build-arg VCS_REF=`git rev-parse --short HEAD` .
+
+for tag in "${tags[@]}"
+do
+    echo "docker tag $DOCKER_REPO $DOCKER_REPO:$tag"
+    docker tag $DOCKER_REPO $DOCKER_REPO:$tag
+done
