--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       MYSQL_USER: "webtrees"
       MYSQL_ROOT_PASSWORD: "badpassword"
       MYSQL_USER_PASSWORD: "badpassword"
-    image: mysql:latest
+    image: mariadb:latest
     restart: unless-stopped
     volumes:
       - db_data:/var/lib/mysql
