--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,10 @@ jobs:
         ref: master
     - name: Prepare repository
       run: git checkout "${GITHUB_REF:11}"
-    #- name: Install setuptools
-    #  run: sudo apt install python3-setuptools
+    - name: Update apt
+      run: sudo apt update
+    - name: Install setuptools
+      run: sudo apt install python3-setuptools -y
     - name: Install pip requirements
       run: pip3 install -r requirements.txt
     - name: Run updater script
