--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,19 +1,44 @@
 name: Test
 
-on: pull_request
+on:
+  pull_request:
+    paths:
+    - Dockerfile
 
 jobs:
-  test:
-
+  build:
     runs-on: ubuntu-latest
 
-    steps: 
+    steps:
     - name: Checkout
       uses: actions/checkout@master
-    - name: Lint
+
+    - name: Build
+      run: docker build .
+
+  lint:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@master
+
+    # use pre-made action
+
+    - name: Lint 1st Party
       uses: luke142367/Docker-Lint-Action@master
+      if: github.repository == 'nathanvaughn/webtrees'
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         TARGET: Dockerfile
-    - name: Build
-      run: docker build .
+
+    # pre-made action doesn't work on forks due to Github token limitations
+    # so, run the underlying linter without the fancy inline diff annotations
+
+    - name: Setup NPM
+      if: github.repository == 'nathanvaughn/webtrees'
+      uses: actions/setup-node@v1
+
+    - name: Lint 3rd Party
+      if: github.repository == 'nathanvaughn/webtrees'
+      run: npm install -g dockerfilelint && dockerfilelint Dockerfile
