--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -36,6 +36,13 @@ jobs:
     - name: Install pip requirements
       run: pip3 install -r requirements.txt
 
+    - name: Set up Docker Buildx
+      id: buildx
+      uses: crazy-max/ghaction-docker-buildx@v1
+      with:
+        buildx-version: latest
+        qemu-version: latest
+
     - name: Docker login
       uses: azure/docker-login@v1
       with:
@@ -46,4 +53,5 @@ jobs:
     - name: Run updater script
       run: python3 updater.py
       env:
+        PLATFORMS: ${{ steps.buildx.outputs.platforms }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
