Update buidlx to version 2

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -38,10 +38,11 @@ jobs:
 
     - name: Set up Docker Buildx
       id: buildx
-      uses: crazy-max/ghaction-docker-buildx@v1
+      uses: crazy-max/ghaction-docker-buildx@v2
       with:
         buildx-version: latest
         qemu-version: latest
+        skip-cache: false
 
     - name: Docker login
       uses: azure/docker-login@v1
