--- a/php.ini
+++ b/php.ini
@@ -1,6 +1,7 @@
 [PHP]
 
-memory_limit = 128M
-max_execution_time = 60
+memory_limit = 256M
+max_execution_time = 90
 post_max_size = 50M
 upload_max_filesize = 50M
+extension=imagick.so
