Add SQL server support, make build marginally faster

--- a/php.ini
+++ b/php.ini
@@ -4,4 +4,7 @@ memory_limit = 256M
 max_execution_time = 90
 post_max_size = 50M
 upload_max_filesize = 50M
+
 extension=imagick.so
+extension=pdo_sqlsrv.so
+extension=sqlsrv.so
