--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@main
+      uses: actions/checkout@v2
 
     - name: Build
       run: docker build .
@@ -21,7 +21,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@main
+      uses: actions/checkout@v2
 
     # use pre-made action
 
@@ -37,7 +37,7 @@ jobs:
 
     - name: Setup NPM
       if: github.repository != 'nathanvaughn/webtrees-docker'
-      uses: actions/setup-node@v2.1.1
+      uses: actions/setup-node@v1
 
     - name: Lint 3rd Party
       if: github.repository != 'nathanvaughn/webtrees-docker'
