--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -50,12 +50,17 @@ jobs:
         path: /tmp/.buildx-cache
         key: buildx-${ WEEK }
 
+    - name: Set up QEMU
+      if: env.WT_UPDATE == 'true'
+      uses: docker/setup-qemu-action@v1
+      with:
+        platforms: all
+
     - name: Set up Docker Buildx
       if: env.WT_UPDATE == 'true'
       uses: docker/setup-buildx-action@v1
       with:
-        buildx-version: latest
-        qemu-version: latest
+        version: latest
 
     - name: Create Builder
       if: env.WT_UPDATE == 'true'
@@ -63,10 +68,10 @@ jobs:
 
     - name: Dockerhub Login
       if: env.WT_UPDATE == 'true'
-      env:
-        DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-        DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
-      run: echo "${DOCKERHUB_PASSWORD}" | docker login --username "${DOCKERHUB_USERNAME}" --password-stdin
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
     - name: Run Updater Script
       if: env.WT_UPDATE == 'true'
