Replace deprecated ::set-env

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -32,7 +32,8 @@ jobs:
       run: pip3 install -r requirements.txt
 
     - name: Check For Updates
-      run: echo "::set-env name=WT_UPDATE::$(python3 updater.py --check)"
+      #run: echo "::set-env name=WT_UPDATE::$(python3 updater.py --check)"
+      run: echo "WT_UPDATE=$(python3 updater.py --check)" >> $GITHUB_ENV
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -41,7 +42,8 @@ jobs:
 
     - name: Determine Week
       if: env.WT_UPDATE == 'true'
-      run: echo "::set-env name=WEEK::$(date +%V)"
+      # run: echo "::set-env name=WEEK::$(date +%V)"
+      run: echo "WEEK=$(date +%V)" >> $GITHUB_ENV
 
     - name: Cache Docker Layers
       if: env.WT_UPDATE == 'true'
