--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -75,6 +75,14 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
+    - name: Github CR Login
+      if: env.WT_UPDATE == 'true'
+      uses: docker/login-action@v1
+      with:
+        registry: ghcr.io
+        username: ${{ secrets.GITHUBCR_USERNAME }}
+        password: ${{ secrets.GITHUBCR_PASSWORD }}
+
     - name: Run Updater Script
       if: env.WT_UPDATE == 'true'
       run: python3 updater.py
