--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       WT_NAME: "Full Name"
       WT_PASS: "mybadpassword"
       WT_EMAIL: "me@example.com"
-    image: nathanvaughn/webtrees:latest
+    image: ghcr.io/nathanvaughn/webtrees:latest
     #build: .
     ports:
       - 80:80
