--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -83,6 +83,14 @@ jobs:
         username: ${{ secrets.GITHUBCR_USERNAME }}
         password: ${{ secrets.GITHUBCR_PASSWORD }}
 
+    - name: nthnv.me CR Login
+      if: env.WT_UPDATE == 'true'
+      uses: docker/login-action@v1
+      with:
+        registry: cr.nthnv.me
+        username: ${{ secrets.NTHNVCR_USERNAME }}
+        password: ${{ secrets.NTHNVCR_PASSWORD }}
+
     - name: Run Updater Script
       if: env.WT_UPDATE == 'true'
       run: python3 updater.py
