--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -29,7 +29,9 @@ jobs:
         python-version: 3.8
 
     - name: Install pip Requirements
-      run: pip3 install -r requirements.txt
+      run: |
+        python3 -m pip install pip wheel --upgrade
+        python3 -m pip install -r requirements.txt
 
     - name: Check For Updates
       #run: echo "::set-env name=WT_UPDATE::$(python3 updater.py --check)"
