--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -19,7 +19,7 @@ jobs:
           python-version: "3.10"
 
       - name: Check For Updates
-        run: echo "::set-output name=matrix::$(python3 updater.py)"
+        run: echo "::set-output name=matrix::$(python3 versionchecker.py)"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
