--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   getversions:
     runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
 
     steps:
       - name: Checkout Code
@@ -19,7 +21,10 @@ jobs:
           python-version: "3.10"
 
       - name: Get Versions
-        run: echo "::set-output name=matrix::$(python3 versionchecker.py)"
+        id: set-matrix
+        run: |
+          echo "::echo::on"
+          echo "::set-output name=matrix::$(python3 versionchecker.py)"
 
   buildversions:
     if: ${{ fromJSON(needs.getversions.outputs.matrix).include[0] }}
