--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -27,6 +27,7 @@ jobs:
           echo "::set-output name=matrix::$(python3 versionchecker.py)"
 
   buildversions:
+    needs: getversions
     if: ${{ fromJSON(needs.getversions.outputs.matrix).include[0] != null }}
     runs-on: ubuntu-latest
     strategy:
