--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -83,6 +83,13 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           custom_tag : ${{ matrix.webtrees_version }}
 
+      - name: Build Release Notes
+        # https://trstringer.com/github-actions-multiline-strings/
+        run: |
+          echo "IMAGE_LIST<<EOF" >> $GITHUB_ENV
+          python3 -c "m='${{ matrix.images }}';[print(f'- {i}') for i in m.split(',')]" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
+
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
@@ -90,4 +97,5 @@ jobs:
           tag_name: ${{ matrix.webtrees_version }}
           body: |
             Automated release for webtrees version ${{ matrix.webtrees_version }}: ${{ matrix.src_url }}
-            Tags pushed: ${{ matrix.images }}
+            Tags pushed:
+            ${{ env.IMAGE_LIST }}
