--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -20,10 +20,16 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Setup Python 3.10
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version-file: .python-version
+          cache: pip
+
+      - name: Install Requirements
+        run: |
+          python -m pip install pip wheel --upgrade
+          python -m pip install -r requirements.txt
 
       - name: Get Versions
         id: set-matrix
