--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -34,6 +34,8 @@ jobs:
       - name: Get Versions
         id: set-matrix
         run: echo "matrix=$(python3 versionchecker.py --forced ${{ inputs.forced }})" >> $GITHUB_OUTPUT
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   buildversions:
     needs: getversions
