--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,13 +9,15 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      WEBTREES_VERSION: "2.1.16"
 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
       - name: Build
-        run: docker build --build-arg WEBTREES_VERSION=2.1.7 .
+        run: docker build --build-arg WEBTREES_VERSION=$WEBTREES_VERSION .
 
   lint:
     runs-on: ubuntu-latest
