--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,14 +10,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      WEBTREES_VERSION: "2.1.16"
+      WEBTREES_VERSION: "2.1.18"
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: Build
-        run: docker build --build-arg WEBTREES_VERSION=$WEBTREES_VERSION .
+        run: python dev/build_test_version.py --webtrees_version $WEBTREES_VERSION
 
   lint:
     runs-on: ubuntu-latest
