--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -29,11 +29,11 @@ jobs:
       - name: Install Requirements
         run: |
           python -m pip install pip wheel --upgrade
-          python -m pip install -r requirements.txt
+          python -m pip install -r dev/requirements.txt
 
       - name: Get Versions
         id: set-matrix
-        run: echo "matrix=$(python3 versionchecker.py --forced ${{ inputs.forced }})" >> $GITHUB_OUTPUT
+        run: echo "matrix=$(python3 dev/versionchecker.py --forced ${{ inputs.forced }})" >> $GITHUB_OUTPUT
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
